# projinit

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.yaml  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.claude/commands/: lint.md  opensource-ready.md  quality.md  speckit.implement.md  sync-docs.md  sync-tech-docs.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.specify/features/001-version-banner/: plan.md  spec.md  tasks.md
.specify/memory/: constitution.md
doc/: README.md  architecture.md  models.md
docs/: cli.md  configuration.md  detection.md  extending.md  flow.md  standards.md  templates.md
docs/adr/: 0001-argparse-vs-click.md  0002-src-layout.md  0003-yaml-standards.md  0004-scoring-detection.md  0005-jinja2-templates.md  0006-rich-terminal.md  0007-config-hierarchy.md  0009-check-levels.md  0010-cli-only.md  index.md
docs/api/: checker.md  detector.md  reporter.md
docs/internals/: detection-algorithm.md
specs/002-tech-gitignore/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-tech-gitignore/checklists/: requirements.md
specs/003-output-path/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-output-path/checklists/: requirements.md
specs/004-version-banner/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-precommit-config/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-tech-list-enhancement/: spec.md  tasks.md
specs/007-github-actions-ci/: plan.md  spec.md  tasks.md
specs/008-project-lifecycle/: plan.md  spec.md  tasks.md
src/projinit/: __init__.py  __main__.py  checks.py  cli.py  config.py  generator.py  main_cli.py  validators.py  version.py
terraform/: .gitignore  .terraform.lock.hcl  README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_cli.py
tests/unit/: __init__.py  test_checker.py  test_detector.py  test_loader.py  test_models.py
(+76 files in other folders)
